# escapi

./: CMakeLists.txt
common/: CMakeLists.txt  escapi.cpp  escapi.h
enum/: main.cpp
enumprops/: main.cpp
escapi_dll/: CMakeLists.txt  capture.cpp  capture.h  choosedeviceparam.h  conversion.cpp  conversion.h  escapi_dll.cpp  interface.cpp  interface.h  scopedrelease.h  videobufferlock.cpp  videobufferlock.h
multicap/: main.cpp  stb_image.h
ogl/: main.cpp
propgui/: imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_sdl.cpp  imgui_impl_sdl.h  imgui_internal.h  main.cpp  stb_rect_pack.h  stb_textedit.h  stb_truetype.h
simplest/: CMakeLists.txt  main.cpp
